--- a/index.qmd
+++ b/index.qmd
@@ -5,3 +5,6 @@ title: "temp"
 This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+
+<button class="btn">Fuck</button>
+<link rel="stylesheet" href="main.scss">
