--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,5 @@
 ---
-title: "temp"
+title: "ABOPSC"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-<button class="btn">Fuck</button>
-<link rel="stylesheet" href="main.scss">
+{{< include _includes/_lab_nav.html >}}
