--- a/pages/about.qmd
+++ b/pages/about.qmd
@@ -1,5 +1,5 @@
 ---
-title: "About"
+title: "About ABopsC"
 ---
 
-About this site
+Welcome to our site on which we teach you about AP Computer Science A Units 1-4 to prepare our classmates for the AP Exam. We also have a cars-themed lab for you to practice the concepts in application.
