--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "We can also use compound operators which follows the form a += 1 or age ++ in order to indicate a = a + 1. For example, if you want to model the amount of cars that have entered the highway. Each time the light turns green the number of cars is car += 2.\n",
     "\n",
-    "### Unit 2\n",
+    "# Unit 2\n",
     "- Now that Hack 1 we have practically covered Unit 1 of AP computer science that involves primitive data types and operators (both simple and compound)\n",
     "- When you want to characterize all the cars, you can create a class or a template that basically defines what an object is like and what the object can do\n",
     "- When it comes to cars, you can create a class for what the car is like. The class Cars can have variables like String brand, int age, double mpg. With these parameters, you can create an actual object. \n",
@@ -49,7 +49,8 @@
     "- Inside the parentheses --> parameters which are values passed\n",
     "- Car (String brand, int age, double mpg)\n",
     "- If you want to overload a constructor, you can have the same characteristics but different order of variables. For example, Car (double mpg, String brand, int age)\n",
-    "### Unit 3\n",
+    "\n",
+    "# Unit 3\n",
     "\n",
     "Continuing the cars theme, we are going to explore Unit 3 which includes topics like boolean expressions, if statements, control flow, if-else statements, else-if statements, compound boolean expressions, equivalent boolean expressions, and comparing objects. This is roughly 15%-17.5% of the AP Exam. \n",
     "\n",
@@ -59,10 +60,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
-    "code block"
+    "boolean isEngineRunning = true;\n",
+    "int speed = 60;\n",
+    "boolean isSpeedAboveThreshold = speed > 50;\n",
+    "\n",
+    "if (isEngineRunning && isSpeedAboveThreshold) {\n",
+    "    System.out.println(\"The car is moving fast!\");\n",
+    "} else {\n",
+    "    System.out.println(\"The car is not moving fast.\");\n",
+    "}"
    ]
   },
   {
@@ -76,10 +89,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
-    "code block"
+    "boolean isEngineRunning = true;\n",
+    "int speed = 60;\n",
+    "boolean isSpeedAboveThreshold = speed > 50;\n",
+    "boolean isEmergencyBrakeApplied = false;\n",
+    "\n",
+    "// compound boolean\n",
+    "if (isEngineRunning && (isSpeedAboveThreshold || isEmergencyBrakeApplied)) {\n",
+    "    System.out.println(\"The car is in an emergency situation!\");\n",
+    "} else {\n",
+    "    System.out.println(\"The car is in a normal situation.\");\n",
+    "}"
    ]
   },
   {
@@ -93,10 +120,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
-    "code block"
+    "boolean isEngineRunning = true;\n",
+    "if (isEngineRunning) {\n",
+    "    System.out.println(\"The engine is running\");\n",
+    "} else {\n",
+    "    System.out.println(\"The car's engine is not running.\")\n",
+    "}"
    ]
   },
   {
@@ -110,10 +146,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
-    "code block"
+    "int speed = 80;\n",
+    "int speedLimit = 60;\n",
+    "\n",
+    "if (speed > speedLimit) {\n",
+    "    System.out.println(\"Warning: you are above the speed limit!\");\n",
+    "} else {\n",
+    "    System.out.println(\"You are below the speed limit\");\n",
+    "\n",
+    "}"
    ]
   },
   {
@@ -127,10 +175,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
-    "code block"
+    "String weather = \"rainy\";\n",
+    "int visibility = 30;\n",
+    "\n",
+    "if (weather.equals(\"sunny\")) {\n",
+    "    System.out.println(\"Driving in normal mode.\");\n",
+    "} else if (weather.equals(\"rainy\") && visibility < 50) {\n",
+    "    System.out.println(\"Driving in slow mode due to low visibility.\");\n",
+    "} else if (weather.equals(\"snowy\")) {\n",
+    "    System.out.println(\"Driving in snow mode.\");\n",
+    "} else {\n",
+    "    System.out.println(\"Driving in normal mode.\");\n",
+    "}"
    ]
   },
   {
@@ -144,10 +207,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
-    "code block"
+    "String carMake = \"Toyota\";\n",
+    "String carModel = \"Camry\";\n",
+    "\n",
+    "if (carMake.equals(\"Toyota\") && carModel == \"Camry\") {\n",
+    "    System.out.println(\"The car is a Toyota Camry.\");\n",
+    "} else {\n",
+    "    System.out.println(\"The car is not a Toyota Camry.\");\n",
+    "}"
    ]
   },
   {
@@ -161,10 +235,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
-    "code block"
+    "Car car1 = new Car(\"Toyota\", \"Camry\");\n",
+    "Car car2 = new Car(\"Toyota\", \"Camry\");\n",
+    "\n",
+    "if (car1 == car2) {\n",
+    "    System.out.println(\"car1 and car2 are the same object.\");\n",
+    "} else {\n",
+    "    System.out.println(\"car1 and car2 are different objects.\");\n",
+    "}"
    ]
   },
   {
@@ -178,10 +263,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
-    "code block"
+    "public static void main(String[] args) {\n",
+    "    // Create two Car objects\n",
+    "    Car car1 = new Car(\"Toyota\", \"Camry\", 2020);\n",
+    "    Car car2 = new Car(\"Toyota\", \"Camry\", 2020);\n",
+    "\n",
+    "    // Compare using equals() method\n",
+    "    if (car1.equals(car2)) {\n",
+    "        System.out.println(\"car1 is equal to car2\");\n",
+    "    } else {\n",
+    "        System.out.println(\"car1 is not equal to car2\");\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -190,6 +290,93 @@
    "metadata": {},
    "source": [
     "Key to note is the use of truth tables. Oftentimes, if you want to visualize the possible outcomes of different combinations of boolean values and logical operators, and use them to evaluate the overall result of a boolean expression.\n",
+    "\n",
+    "## Hack 3: \n",
+    "1. Create a Car object named myCar with the following details:\n",
+    "- Make: \"Toyota\"\n",
+    "- Model: \"Camry\"\n",
+    "- Year: 2019\n",
+    "- Price: 25000.0\n",
+    "2. Print the car details using the getMake(), getModel(), getYear(), and getPrice() methods.\n",
+    "\n",
+    "3. Check if the car is affordable within a budget of $20000 using the isAffordable() method and print the result using if-else statement.\n",
+    "\n",
+    "4. Determine and print the car's classification based on its price using if-else-if statement:\n",
+    "- If the price is greater than $50000, print \"The car is a luxury car.\"\n",
+    "- If the price is greater than $30000, print \"The car is a mid-range car.\"\n",
+    "- Otherwise, print \"The car is an affordable car.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Car {\n",
+    "    private String make;\n",
+    "    private String model;\n",
+    "    private int year;\n",
+    "    private double price;\n",
+    "    \n",
+    "    // Constructor\n",
+    "    public Car(String make, String model, int year, double price) {\n",
+    "        this.make = make;\n",
+    "        this.model = model;\n",
+    "        this.year = year;\n",
+    "        this.price = price;\n",
+    "    }\n",
+    "    \n",
+    "    // Getter methods\n",
+    "    public String getMake() {\n",
+    "        return make;\n",
+    "    }\n",
+    "    \n",
+    "    public String getModel() {\n",
+    "        return model;\n",
+    "    }\n",
+    "    \n",
+    "    public int getYear() {\n",
+    "        return year;\n",
+    "    }\n",
+    "    \n",
+    "    public double getPrice() {\n",
+    "        return price;\n",
+    "    }\n",
+    "    \n",
+    "    // Method to determine if the car is affordable or not\n",
+    "    public boolean isAffordable(double budget) {\n",
+    "        if (price <= budget) {\n",
+    "            return true;\n",
+    "        } else {\n",
+    "            return false;\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    // Main method\n",
+    "    public static void main(String[] args) {\n",
+    "        // Create a new Car object\n",
+    "\n",
+    "        // Print the car details\n",
+    "        \n",
+    "        // Check if the car is affordable with a budget of $20000 using an if-else statement\n",
+    "       \n",
+    "        // Check if the car is a luxury car based on its price using if-else-if statement\n",
+    "    \n",
+    "    }\n",
+    "}\n",
+    "Car.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "# Unit 4\n",
     "\n",
@@ -200,7 +387,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "code block"
@@ -221,7 +412,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "code block"
@@ -238,7 +433,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "code block"
@@ -255,7 +454,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "code block"
@@ -264,21 +467,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "17.0.4.1+1"
   },
   "orig_nbformat": 4,
   "vscode": {
