--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -6,10 +6,13 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Lesson\"\n",
+    "title: \"Units 1 to 4 Lesson\"\n",
+    "author: Iris Yang and Hetvi Trivedi\n",
+    "date: April 16, 2023\n",
     "format:\n",
     "  html:\n",
-    "    html-math-method: katex\n",
+    "    code-fold:true\n",
+    "keep-ipynb: true\n",
     "---"
    ]
   },
