--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Units 1 to 4 Lesson\"\n",
-    "author: Iris Yang and Hetvi Trivedi\n",
-    "date: April 16, 2023\n",
+    "title: Units 1 to 4 Lesson\n",
+    "author: Hetvi Trivedi\n",
+    "date: 'April 16, 2023'\n",
     "format:\n",
     "  html:\n",
-    "    code-fold:true\n",
+    "    code-fold: true\n",
     "keep-ipynb: true\n",
     "---"
    ]
