--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -12,6 +12,7 @@
     "format:\n",
     "  html:\n",
     "    code-fold: true\n",
+    "    code-line-numbers: true\n",
     "keep-ipynb: true\n",
     "---"
    ]
