unit 1 and unit 2 without hacks

--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -1,9 +1,10 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "---\n",
     "title: Units 1 to 4 Lesson\n",
@@ -12,13 +13,11 @@
     "format:\n",
     "  html:\n",
     "    code-fold: true\n",
-    "    code-line-numbers: true\n",
     "keep-ipynb: true\n",
     "---"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,40 +34,275 @@
     "\n",
     "The first step to doing this is through storing these different variables just mentioned as data types - primitive data types. You use variables to store data in Java. Types of primitive data include integers, doubles, booleans, etc.\n",
     "\n",
-    "Now, there are so many things you need to make when buying a car: price, brand, milage, color, etc. We can set the price of a car can be stored as a double, the car brand as a strings. If you want to store whether you like a car or not, you can store that information as a boolean data type. \n",
-    "\n",
-    "Now that you have data and variables declared, you can also compare prices of different cars through expressions and assignment statements. we will go more in depth about boolean comparison statement in Unit 3. Casting, the assignment of one data type to another, can be used for rounding. This can make prices more customer-friendly and easier to compare.\n",
-    "\n",
-    "There are operators like the modulo operator where the remainder is computed or there's division and multiplication. If you ever want to compare car prices, you can set up a code with scanner input which is also a very common with consoles.\n",
-    "\n",
-    "image\n",
-    "\n",
-    "We can also use compound operators which follows the form a += 1 or age ++ in order to indicate a = a + 1. For example, if you want to model the amount of cars that have entered the highway. Each time the light turns green the number of cars is car += 2.\n",
-    "\n",
-    "# Unit 2\n",
-    "- Now that Hack 1 we have practically covered Unit 1 of AP computer science that involves primitive data types and operators (both simple and compound)\n",
-    "- When you want to characterize all the cars, you can create a class or a template that basically defines what an object is like and what the object can do\n",
-    "- When it comes to cars, you can create a class for what the car is like. The class Cars can have variables like String brand, int age, double mpg. With these parameters, you can create an actual object. \n",
-    "Car honda = new Car (\"Honda,\" \"10,\" \"54.6\") --> constructor\n",
-    "- Inside the parentheses --> parameters which are values passed\n",
-    "- Car (String brand, int age, double mpg)\n",
-    "- If you want to overload a constructor, you can have the same characteristics but different order of variables. For example, Car (double mpg, String brand, int age)\n",
-    "\n",
-    "# Unit 3\n",
-    "\n",
-    "Continuing the cars theme, we are going to explore Unit 3 which includes topics like boolean expressions, if statements, control flow, if-else statements, else-if statements, compound boolean expressions, equivalent boolean expressions, and comparing objects. This is roughly 15%-17.5% of the AP Exam. \n",
-    "\n",
-    "Just like how cars have different conditions or states, we can use boolean expressions in Java to represent conditions that evaluate to either true or false. For example, we can have a boolean expression that checks if a car's engine is running or if its speed is greater than a certain threshold."
+    "Now, there are so many things you need to make when buying a car: price, brand, milage, color, etc. We can set the price of a car can be stored as a double, the car brand as a strings. If you want to store whether you like a car or not, you can store that information as a boolean data type. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Car {\n",
+    "    public static void main(String[] args) {\n",
+    "        int year = 2023;\n",
+    "        double price = 30000.00;\n",
+    "        boolean isElectric = true;\n",
+    "        \n",
+    "        System.out.println(\"Year: \" + year);\n",
+    "        System.out.println(\"Price: $\" + price);\n",
+    "        System.out.println(\"Is Electric: \" + isElectric);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are operators like the modulo operator where the remainder is computed or there's division and multiplication. If you ever want to compare car prices, you can set up a code with scanner input which is also a very common with consoles.\n",
+    "\n",
+    "![This is an image](https://github.com/iriisyang/Iris-Yang/blob/master/images/operator.png?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import java.util.Scanner;\n",
+    "\n",
+    "public class CarPrice {\n",
+    "    public static void main(String[] args) {\n",
+    "        Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "        System.out.print(\"Enter the price of the car: \");\n",
+    "        double price = scanner.nextDouble();\n",
+    "\n",
+    "        System.out.println(\"The price of the car is $\" + price);\n",
+    "\n",
+    "        scanner.close();\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also use compound operators which follows the form a += 1 or age ++ in order to indicate a = a + 1. For example, if you want to model the amount of cars that have entered the highway. Each time the light turns green the number of cars is car += 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int cars = 0; // starting number of cars\n",
+    "int numCarsEntering = 2; // number of cars entering at a time\n",
+    "int numIterations = 5; // number of times to loop\n",
+    "\n",
+    "for (int i = 0; i < numIterations; i++) {\n",
+    "    cars += numCarsEntering; // use compound operator to add cars\n",
+    "    System.out.println(\"Number of cars on highway: \" + cars);\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unit 2\n",
+    "\n",
+    "Unit 2 mostly focuses on objects, classes, methods, and constructors.\n",
+    "\n",
+    "In order to use the data you need to first create a class. In this class, you can then create objects and methods to access the data.\n",
+    "\n",
+    "An object is a reference type and can be used to access data. A constructor makes data that is stored in an object. For example, I can make a car object and create a constructor that includes different characteristics of the car such as its brand, color, price, and milage. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Car {\n",
+    "    private String brand;\n",
+    "    private String color;\n",
+    "    private double price;\n",
+    "    private double mileage;\n",
+    "    \n",
+    "    public Car(String brand, String color, double price, double mileage) {\n",
+    "        this.brand = brand;\n",
+    "        this.color = color;\n",
+    "        this.price = price;\n",
+    "        this.mileage = mileage;\n",
+    "    }\n",
+    "    \n",
+    "    // Getters and setters\n",
+    "    public String getBrand() {\n",
+    "        return brand;\n",
+    "    }\n",
+    "    \n",
+    "    public void setBrand(String brand) {\n",
+    "        this.brand = brand;\n",
+    "    }\n",
+    "    \n",
+    "    public String getColor() {\n",
+    "        return color;\n",
+    "    }\n",
+    "    \n",
+    "    public void setColor(String color) {\n",
+    "        this.color = color;\n",
+    "    }\n",
+    "    \n",
+    "    public double getPrice() {\n",
+    "        return price;\n",
+    "    }\n",
+    "    \n",
+    "    public void setPrice(double price) {\n",
+    "        this.price = price;\n",
+    "    }\n",
+    "    \n",
+    "    public double getMileage() {\n",
+    "        return mileage;\n",
+    "    }\n",
+    "    \n",
+    "    public void setMileage(double mileage) {\n",
+    "        this.mileage = mileage;\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getters and setters use to manipulate the variables. Getters retrieve the variables and setters set the variable. \n",
+    "\n",
+    "You can also use methods to make the object perform certain actions. The method includes the scope which indicates if it is public or private allowing other classes/objects to access it or not. There is also the return type. Void does not return any data. Next is the name of the method which usually describes its action. The parameters include what variables are included in the method. Finally, the body actually performs the action. \n",
+    "\n",
+    "![This is an image](https://github.com/iriisyang/Iris-Yang/blob/master/images/method.png?raw=true)\n",
+    "\n",
+    "The method can compare the price of two cars for example. You can create code that outputs the cheaper car when entering the name of the two cars."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Car {\n",
+    "    private String name;\n",
+    "    private double price;\n",
+    "\n",
+    "    public Car(String name, double price) {\n",
+    "        this.name = name;\n",
+    "        this.price = price;\n",
+    "    }\n",
+    "\n",
+    "    public String getName() {\n",
+    "        return name;\n",
+    "    }\n",
+    "\n",
+    "    public double getPrice() {\n",
+    "        return price;\n",
+    "    }\n",
+    "\n",
+    "    public static String cheaperCar(String car1Name, double car1Price, String car2Name, double car2Price) {\n",
+    "        Car car1 = new Car(car1Name, car1Price);\n",
+    "        Car car2 = new Car(car2Name, car2Price);\n",
+    "\n",
+    "        if (car1.getPrice() < car2.getPrice()) {\n",
+    "            return car1.getName();\n",
+    "        } else {\n",
+    "            return car2.getName();\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        String cheaperCarName = cheaperCar(\"Toyota\", 20000.0, \"Honda\", 25000.0);\n",
+    "        System.out.println(\"The cheaper car is: \" + cheaperCarName);\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is also important to learn about the math classes. They perform common mathematical functions such as absolute value, exponent power, square root, random number generation, etc. \n",
+    "\n",
+    "If acceleration is an important factor in deciding which car you want, absolute value may be important. The car can constantly display your acceleration speed no mater if you are going forward or backward."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Acceleration {\n",
+    "    public static void main(String[] args) {\n",
+    "        double velocity1 = 10.0;\n",
+    "        double velocity2 = 5.0;\n",
+    "        double time = 2.0;\n",
+    "        \n",
+    "        // Calculate acceleration using absolute value\n",
+    "        double acceleration = Math.abs((velocity2 - velocity1) / time);\n",
+    "        \n",
+    "        System.out.println(\"The acceleration is \" + acceleration);\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Maybe there is a whole registry of cars and you do not want to search though each one. Use the random function to randomly display a car and its characteristics to see if it is the right fit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import java.util.Random;\n",
+    "\n",
+    "public class CarRegistry {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Define car registry\n",
+    "        String[] make = {\"Honda\", \"Toyota\", \"Ford\", \"Chevrolet\", \"BMW\"};\n",
+    "        String[] model = {\"Civic\", \"Camry\", \"F-150\", \"Silverado\", \"X5\"};\n",
+    "        int[] year = {2015, 2016, 2017, 2018, 2019, 2020};\n",
+    "        double[] price = {15000.0, 20000.0, 25000.0, 30000.0, 35000.0, 40000.0};\n",
+    "        \n",
+    "        // Select a random car from the registry\n",
+    "        Random rand = new Random();\n",
+    "        int index = rand.nextInt(make.length);\n",
+    "        String selectedMake = make[index];\n",
+    "        String selectedModel = model[index];\n",
+    "        int selectedYear = year[rand.nextInt(year.length)];\n",
+    "        double selectedPrice = price[rand.nextInt(price.length)];\n",
+    "        \n",
+    "        // Display the selected car and its characteristics\n",
+    "        System.out.println(\"Selected Car: \" + selectedMake + \" \" + selectedModel);\n",
+    "        System.out.println(\"Year: \" + selectedYear);\n",
+    "        System.out.println(\"Price: $\" + selectedPrice);\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "boolean isEngineRunning = true;\n",
@@ -93,11 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boolean isEngineRunning = true;\n",
@@ -124,11 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boolean isEngineRunning = true;\n",
@@ -150,11 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "int speed = 80;\n",
@@ -179,11 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "String weather = \"rainy\";\n",
@@ -211,11 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "String carMake = \"Toyota\";\n",
@@ -239,11 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Car car1 = new Car(\"Toyota\", \"Camry\");\n",
@@ -267,11 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public static void main(String[] args) {\n",
@@ -314,11 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class Car {\n",
@@ -391,11 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "code block"
@@ -416,11 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "code block"
@@ -437,11 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "code block"
@@ -458,11 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "code block"
@@ -479,7 +665,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.4.1+1"
   },
