--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -27,6 +27,7 @@
     "- Start with the scavenger hunt quiz\n",
     "\n",
     "## Lesson\n",
+    "\n",
     "### Unit 1\n",
     "Set the scene: you are a teenager who has their license and wants to find a car to buy. When you go to the car dealership, you realize that there are many different things you have to keep track of. You have to keep track of the car brands you look at, the prices of the cars, phone numbers of different sales representatives, etc. \n",
     "\n",
@@ -295,6 +296,45 @@
     "        System.out.println(\"Selected Car: \" + selectedMake + \" \" + selectedModel);\n",
     "        System.out.println(\"Year: \" + selectedYear);\n",
     "        System.out.println(\"Price: $\" + selectedPrice);\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hack 2\n",
+    "\n",
+    "Create a class named \"Car\" with the following attributes:\n",
+    "\n",
+    "make (String)\n",
+    "model (String)\n",
+    "year (int)\n",
+    "price (double)\n",
+    "isUsed (boolean)\n",
+    "Create a constructor that initializes all of these attributes.\n",
+    "\n",
+    "Create a method named \"printCarDetails()\" that prints out all of the attributes of the car.\n",
+    "\n",
+    "In the main method, create an array of three cars with the following details:\n",
+    "\n",
+    "Car 1: Make = \"Toyota\", Model = \"Corolla\", Year = 2022, Price = 24999.99, isUsed = false\n",
+    "Car 2: Make = \"Honda\", Model = \"Accord\", Year = 2018, Price = 18999.99, isUsed = true\n",
+    "Car 3: Make = \"Ford\", Model = \"Mustang\", Year = 2020, Price = 34999.99, isUsed = true\n",
+    "Loop through the array and print out the details of each car using the \"printCarDetails()\" method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Car {\n",
+    "    // create constructor\n",
+    "    public void printCarDetails() {\n",
+    "        // method to print car details\n",
     "    }\n",
     "}\n"
    ]
