--- a/pages/scavenger.ipynb
+++ b/pages/scavenger.ipynb
@@ -1,8 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
    "source": [
     "---\n",
     "title: Scavenger Hunt\n",
@@ -13,6 +19,15 @@
     "    code-fold: true\n",
     "keep-ipynb: true\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Welcome to our scavenger hunt!\n",
+    "\n",
+    "We have computers set up across the room with each question. Start at question 1 and make sure to record your answers. The responses will create message and the key to a special prize!"
    ]
   },
   {
@@ -62,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -97,23 +112,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mif (!(\u001b[0m\u001b[1m\u001b[30m\u001b[41mx\u001b[0m\u001b[1m\u001b[30m||y) || (x && y)) {\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable x\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mif (!(x||\u001b[0m\u001b[1m\u001b[30m\u001b[41my\u001b[0m\u001b[1m\u001b[30m) || (x && y)) {\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable y\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mif (!(x||y) || (\u001b[0m\u001b[1m\u001b[30m\u001b[41mx\u001b[0m\u001b[1m\u001b[30m && y)) {\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable x\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mif (!(x||y) || (x && \u001b[0m\u001b[1m\u001b[30m\u001b[41my\u001b[0m\u001b[1m\u001b[30m)) {\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable y\u001b[0m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "// x is true, y is false\n",
     "if (!(x||y) || (x && y)) {\n",
-    "    System.out.print(\"on\")\n",
+    "    System.out.print(\"on\");\n",
     "}\n",
     "if (!(x&&y) && (x || y)) {\n",
-    "    System.out.print(\"under\")\n",
+    "    System.out.print(\"under\");\n",
     "}\n",
     "else {\n",
-    "    System.out.print(\"in\")\n",
+    "    System.out.print(\"in\");\n",
     "}"
    ]
   },
@@ -150,7 +189,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A. 11 (chair) B. 15 (backpack) C. 31 (table) D. error (floor)"
+    "A. 11 (chair) \n",
+    "\n",
+    "B. 15 (backpack) \n",
+    "\n",
+    "C. 31 (table) \n",
+    "\n",
+    "D. error (floor)"
    ]
   },
   {
@@ -163,17 +208,35 @@
     "Items whose value does not change are called...\n",
     "\n",
     "A. variable (Mr.M's desk)\n",
+    "\n",
     "B. stay-same (bathroom) \n",
+    "\n",
     "C. literal (outside) \n",
+    "\n",
     "D. unvariable (hetvi's backpack)"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "17.0.4+8"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
