--- a/pages/scavenger.ipynb
+++ b/pages/scavenger.ipynb
@@ -1,12 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "java"
+     "languageId": "shellscript"
     }
    },
+   "outputs": [],
    "source": [
     "---\n",
     "title: Scavenger Hunt\n",
@@ -41,7 +43,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "java"
+     "languageId": "shellscript"
     }
    },
    "outputs": [],
@@ -78,7 +80,7 @@
    "execution_count": 5,
    "metadata": {
     "vscode": {
-     "languageId": "java"
+     "languageId": "shellscript"
     }
    },
    "outputs": [],
@@ -110,37 +112,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "java"
+     "languageId": "shellscript"
     }
    },
-   "outputs": [
-    {
-     "ename": "CompilationException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mif (!(\u001b[0m\u001b[1m\u001b[30m\u001b[41mx\u001b[0m\u001b[1m\u001b[30m||y) || (x && y)) {\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable x\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mif (!(x||\u001b[0m\u001b[1m\u001b[30m\u001b[41my\u001b[0m\u001b[1m\u001b[30m) || (x && y)) {\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable y\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mif (!(x||y) || (\u001b[0m\u001b[1m\u001b[30m\u001b[41mx\u001b[0m\u001b[1m\u001b[30m && y)) {\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable x\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mif (!(x||y) || (x && \u001b[0m\u001b[1m\u001b[30m\u001b[41my\u001b[0m\u001b[1m\u001b[30m)) {\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable y\u001b[0m",
-      ""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// x is true, y is false\n",
     "if (!(x||y) || (x && y)) {\n",
@@ -167,7 +145,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "java"
+     "languageId": "shellscript"
     }
    },
    "outputs": [],
@@ -217,15 +195,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
-   "language": "java",
-   "name": "java"
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
   },
   "language_info": {
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "bash",
    "pygments_lexer": "java",
    "version": "17.0.4+8"
   },
