--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "---\n",
     "title: Units 1 to 4 Lesson\n",
-    "author: Hetvi Trivedi\n",
+    "author: Iris Yang\n",
     "date: 'April 16, 2023'\n",
     "format:\n",
     "  html:\n",
