--- a/pages/lesson.ipynb
+++ b/pages/lesson.ipynb
@@ -339,6 +339,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unit 3\n",
+    "\n",
+    "Continuing the cars theme, we are going to explore Unit 3 which includes topics like boolean expressions, if statements, control flow, if-else statements, else-if statements, compound boolean expressions, equivalent boolean expressions, and comparing objects. This is roughly 15%-17.5% of the AP Exam. \n",
+    "\n",
+    "Just like how cars have different conditions or states, we can use boolean expressions in Java to represent conditions that evaluate to either true or false. For example, we can have a boolean expression that checks if a car's engine is running or if its speed is greater than a certain threshold."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -624,9 +636,7 @@
    "source": [
     "\n",
     "# Unit 4\n",
-    "\n",
-    "Now imagine you're a car mechanic, and you have a long list of cars waiting to be fixed. Instead of manually fixing each car one by one, you want to use a loop to efficiently go through the list. This is where a while loop comes in handy.\n",
-    "A while loop is used when you want to repeat a block of code as long as a certain condition is true. For example, you can use a while loop to fix cars in your list until there are no more cars left."
+    "A while loop is used when you want to repeat a block of code as long as a certain condition is true. For example, you can use a while loop to fix cars in your list until there are no more cars left. Imagine you have a parking lot filled with different cars, and you want to perform a specific task for each car, such as checking their fuel level. This is where a while loop can come in handy. Let's take a look at some Java code:\n"
    ]
   },
   {
@@ -635,7 +645,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "code block"
+    "int carIndex = 0;\n",
+    "while (carIndex < cars.length) {\n",
+    "    Car currentCar = cars[carIndex];\n",
+    "    // Code to check fuel level of currentCar\n",
+    "    carIndex++;\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, we're using a while loop to iterate through an array of cars. The carIndex variable keeps track of the current car we're processing, and the loop continues as long as there are more cars in the array. The loop body performs the task of checking the fuel level of each car."
    ]
   },
   {
@@ -647,7 +670,7 @@
     "\n",
     "Break and continue statements help loops. Break statement will help immediately exit out of the loop. Continue statement jumps to the next iteration. \n",
     "\n",
-    "There's also try-catch staetment blocks and excepion throwing. Exceptions are signs that something is wrong with the code at runtime and the try-catch statements helps keep the program from crashing. The program tries to run the code assuming it works in the try block and if it catches an exception, it moves to the catch block. Then, there is a finally block that runs afterwards no matter what the try or catch blocks say."
+    "There's also try-catch statement blocks and excepion throwing. Exceptions are signs that something is wrong with the code at runtime and the try-catch statements helps keep the program from crashing. The program tries to run the code assuming it works in the try block and if it catches an exception, it moves to the catch block. Then, there is a finally block that runs afterwards no matter what the try or catch blocks say."
    ]
   },
   {
